Created gargoyles page with a listing and a new page for creating a new gargoyle. Still to do - insert content into hompeage and acreate a route

--- a/src/main/resources/templates/gargoyles/gargoyles.html
+++ b/src/main/resources/templates/gargoyles/gargoyles.html
@@ -29,7 +29,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="gargoyle : ${allGargoyles}">
+    <tr th:each="gargoyle : ${gargoyles}">
         <td th:text="${gargoyle.id}"></td>
         <td th:text="${gargoyle.name}"></td>
         <td th:text="${gargoyle.age}"></td>
