Added health stat to game.html. Added logic for health drop and health raise when happiness and hunger fluctuate.

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -44,6 +44,12 @@
         </p>
 
         <p>
+            <strong>Health:</strong>
+            <span th:text="${gargoyle.health}">100</span>
+            / 100
+        </p>
+
+        <p>
             <strong>Active Minutes (in-game time):</strong>
             <span th:text="${gargoyle.activeMinutes}">0</span>
         </p>
