--- a/src/main/resources/templates/gargoyles/gargoyles.html
+++ b/src/main/resources/templates/gargoyles/gargoyles.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h3>Here is a listing of all of our gargoyles</h3>
+<h3>Here is a listing of all of your gargoyles</h3>
 <table>
     <thead>
     <tr>
