--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -23,6 +23,9 @@
     <section>
         <h2 th:text="${gargoyle.name}">Gargoyle Name</h2>
 
+
+        <!--This is the hourglass code-->
+
         <div class="hourglass">
             <div class="glass top">
                 <div class="sand sand-top"></div>
@@ -31,6 +34,13 @@
             <div class="glass bottom">
                 <div class="sand sand-bottom"></div>
             </div>
+        </div>
+
+        <!--This is the stopwatch code-->
+        <div class="stopwatch">
+            <div class="hand-second"></div>
+            <div class="hand-minute"></div>
+            <div class="center-dot"></div>
         </div>
 
         <p>
