small change to page title

--- a/src/main/resources/templates/strengthGame.html
+++ b/src/main/resources/templates/strengthGame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Strength Mini Game</title>
+    <title>Tama Gargoyles – Strength Game</title>
     <style>
         body {
             font-family: sans-serif;
