--- a/src/main/resources/templates/gargoyles/renameGargoyle.html
+++ b/src/main/resources/templates/gargoyles/renameGargoyle.html
@@ -11,7 +11,7 @@
       method="post">
 
     <label for="name">Name:</label><br>
-    <input type="text" th:field="*{name}" maxlength="30" required/><br><br>
+    <input type="text" th:field="*{name}" maxlength="30" required pattern="\S(.*\S)?" title="This field is required"/><br><br>
 
     <button type="submit">Rename</button>
 </form>
