--- a/src/main/resources/templates/pong-result.html
+++ b/src/main/resources/templates/pong-result.html
@@ -30,7 +30,12 @@
     </style>
 </head>
 <body>
-<h1>You survived <span th:text="${survivalTime}">0</span> seconds!</h1>
+<h1 th:with="mins=${survivalTime / 60}, secs=${survivalTime % 60}">
+    You survived
+    <span th:if="${mins > 0}" th:text="${mins + ' min '}">0 min </span>
+    <span th:text="${secs + ' secs'}">0 secs</span>!
+</h1>
+<h1> <span th:text="${rewardMessage}"></span></h1>
 <a href="/game">Back to Main Game</a>
 </body>
 </html>
