--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -366,19 +366,16 @@
                             <div class="icon-label" aria-hidden="true">Speed</div>
                         </div>
 
-                        <form action="/intelligence-increase" method="post">
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                            <input type="hidden" name="gargoyleId" th:value="${gargoyle.id}"/>
-                            <input type="hidden" name="strengthDelta" value="0"/>
-                            <input type="hidden" name="speedDelta" value="0"/>
-                            <input type="hidden" name="intelligenceDelta" value="10"/>
-                            <input type="hidden" name="happinessDelta" value="10"/>
-                            <button class="icon-btn icon-btn--play" type="submit" title="Brains Game: +Intelligence" aria-label="Play Brains game">
+                        <div class="action-item">
+                            <button class="icon-btn icon-btn--play"
+                                    type="button"
+                                    th:onclick="|window.location.href='@{/minigame/memory(gargoyleId=${gargoyle.id})}'|"
+                                    title="Play Memory Game: +Intelligence"
+                                    aria-label="Play Memory Game">
                                 <span class="icon" aria-hidden="true">🧠</span>
-                                <span class="sr-only">Brains</span>
                             </button>
-                            <div class="icon-label" aria-hidden="true">Brains</div>
-                        </form>
+                            <div class="icon-label" aria-hidden="true">Memory</div>
+                        </div>
                     </div>
                 </div>
 
