Added evolution images

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -195,7 +195,7 @@
                 <!-- Creature (PNG placeholder) -->
                 <div class="creature-slot">
                     <img class="creature-sprite bob"
-                         th:src="@{/images/gargoyle/baby.png}"
+                         th:src="@{${image_path}}"
                          alt="Your gargoyle">
                 </div>
 
