Small text chenges to index page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,8 +66,8 @@
 
     <h3><span aria-hidden="true">🥚</span> Starting the Game</h3>
     <ul>
-        <li>When you start you receive an egg, and it becomes your responsibility to care for it</li>
-        <li>In time the egg hatches, and you name your Tama Gargoyle</li>
+        <li>At the start of the game you receive an egg, and it becomes your responsibility to care for it</li>
+        <li>In time the egg hatches, and you can name your Tama Gargoyle</li>
     </ul>
 
     <hr>
@@ -109,7 +109,7 @@
 
     <h3><span aria-hidden="true">🍎</span> Feeding</h3>
 
-    <p>You have limited food.</p>
+    <p>You need to feed Tama Gargoyle to stop it being hungry, but you have limited food.</p>
     
     <p>The food you give your Tama Gargoyle affects how it evolves:</p>
 
@@ -146,6 +146,9 @@
     <hr>
 
     <h3><span aria-hidden="true">🎲</span> Playing Games</h3>
+
+    <p>Playing with your Tama Gargoyle increases its happiness and can also win food:</p>
+
     <ul>
         <li>
             <span role="img" aria-label="Strength">💪</span>
@@ -205,12 +208,12 @@
         <li>
             Win →
             <span role="img" aria-label="Gift">🎁</span>
-            9 special foods
+            3 special foods
         </li>
         <li>
             Lose →
             <span role="img" aria-label="Heart">❤️</span>
-            Health drops by 20%, receive 3 special foods
+            Health drops by 20%, hunger drops by 30%
         </li>
     </ul>
 
