fixed CORS issue with hardcoded localhost in game.html

--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -500,11 +500,11 @@
       pollInFlight = true;
       try {
 
-        const res2 = await fetch('http://localhost:8080/game/check/evolution')
+        const res2 = await fetch('/game/check/evolution')
         const result = await res2.text()
 
         if (result == "true"){
-            window.location.href = 'http://localhost:8080/game'
+            window.location.href = '/game'
         }else{
             console.log(result)
             const res = await fetch(window.location.href, {
